# mouse-tracker

./: .gitignore  Cargo.toml  README.md  config.ini  config.toml  gui.gd  mouse_tracker.gd  setup.py
.github/workflows/: generate-release.yaml
lib/: config.ini
mouse-poller/: config.ini
mouse-tracker/: config.toml  gui.gd
mouse-tracker/translations/: en.txt
src/: lib.rs
translations/: en.txt
